<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.example</groupId>
    <artifactId>musify</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>musify</name>
    <description>Rip-off Spotify</description>
    <properties>
        <java.version>17</java.version>
        <mapstruct.version>1.4.2.Final</mapstruct.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-crypto</artifactId>
            <version>5.6.2</version>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>
        <dependency>
            <groupId>com.auth0</groupId>
            <artifactId>java-jwt</artifactId>
            <version>3.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-ui</artifactId>
            <version>1.6.4</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>

        <!--MOCKITO-->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.23.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>2.23.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <!--    <dependencies>-->
    <!--        <dependency>-->
    <!--            <groupId>org.springframework.boot</groupId>-->
    <!--            <artifactId>spring-boot-starter-data-jdbc</artifactId>-->
    <!--        </dependency>-->
    <!--        <dependency>-->
    <!--            <groupId>org.springframework.boot</groupId>-->
    <!--            <artifactId>spring-boot-starter-web</artifactId>-->
    <!--        </dependency>-->

    <!--        <dependency>-->
    <!--            <groupId>mysql</groupId>-->
    <!--            <artifactId>mysql-connector-java</artifactId>-->
    <!--            <scope>runtime</scope>-->
    <!--        </dependency>-->
    <!--        <dependency>-->
    <!--            <groupId>org.springframework.boot</groupId>-->
    <!--            <artifactId>spring-boot-starter-test</artifactId>-->
    <!--            <scope>test</scope>-->
    <!--        </dependency>-->
    <!--        <dependency>-->
    <!--            <groupId>org.mapstruct</groupId>-->
    <!--            <artifactId>mapstruct</artifactId>-->
    <!--            <version>1.4.2.Final</version>-->
    <!--        </dependency>-->
    <!--        <dependency>-->
    <!--            <groupId>org.springdoc</groupId>-->
    <!--            <artifactId>springdoc-openapi-ui</artifactId>-->
    <!--            <version>1.6.4</version>-->
    <!--        </dependency>-->
    <!--        <dependency>-->
    <!--            <groupId>org.springframework.security</groupId>-->
    <!--            <artifactId>spring-security-crypto</artifactId>-->
    <!--            <version>5.6.2</version>-->
    <!--        </dependency>-->
    <!--        <dependency>-->
    <!--            <groupId>org.springframework.boot</groupId>-->
    <!--            <artifactId>spring-boot-starter-validation</artifactId>-->
    <!--        </dependency>-->
    <!--        <dependency>-->
    <!--            <groupId>com.auth0</groupId>-->
    <!--            <artifactId>java-jwt</artifactId>-->
    <!--            <version>3.4.0</version>-->
    <!--        </dependency>-->
    <!--        <dependency>-->
    <!--            <groupId>org.springframework.boot</groupId>-->
    <!--            <artifactId>spring-boot-starter-security</artifactId>-->
    <!--        </dependency>-->
    <!--        <dependency>-->
    <!--            <groupId>org.hibernate</groupId>-->
    <!--            <artifactId>hibernate-core</artifactId>-->
    <!--            <version>5.6.7.Final</version>-->
    <!--        </dependency>-->
    <!--        <dependency>-->
    <!--            <groupId>org.springframework.boot</groupId>-->
    <!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
    <!--            <version>2.6.5</version>-->
    <!--        </dependency>-->
    <!--        <dependency>-->
    <!--            <groupId>org.hibernate</groupId>-->
    <!--            <artifactId>hibernate-validator</artifactId>-->
    <!--            <version>7.0.4.Final</version>-->
    <!--        </dependency>-->
    <!--        &lt;!&ndash; API, java.xml.bind module &ndash;&gt;-->
    <!--        <dependency>-->
    <!--            <groupId>jakarta.xml.bind</groupId>-->
    <!--            <artifactId>jakarta.xml.bind-api</artifactId>-->
    <!--            <version>2.3.2</version>-->
    <!--        </dependency>-->

    <!--        &lt;!&ndash; Runtime, com.sun.xml.bind module &ndash;&gt;-->
    <!--        <dependency>-->
    <!--            <groupId>org.glassfish.jaxb</groupId>-->
    <!--            <artifactId>jaxb-runtime</artifactId>-->
    <!--        </dependency>-->

    <!--        <dependency>-->
    <!--            <groupId>org.javassist</groupId>-->
    <!--            <artifactId>javassist</artifactId>-->
    <!--            <version>3.25.0-GA</version>-->
    <!--        </dependency>-->
    <!--        <dependency>-->
    <!--            <groupId>org.projectlombok</groupId>-->
    <!--            <artifactId>lombok</artifactId>-->
    <!--            <version>1.18.22</version>-->
    <!--        </dependency>-->
    <!--    </dependencies>-->

    <!--    <build>-->
    <!--        <plugins>-->
    <!--            <plugin>-->
    <!--                <groupId>org.springframework.boot</groupId>-->
    <!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
    <!--                <version>${project.parent.version}</version>-->
    <!--            </plugin>-->
    <!--            <plugin>-->
    <!--                <groupId>org.apache.maven.plugins</groupId>-->
    <!--                <artifactId>maven-compiler-plugin</artifactId>-->
    <!--                <version>3.5.1</version>-->
    <!--                <configuration>-->
    <!--                    <source>1.8</source>-->
    <!--                    <target>1.8</target>-->
    <!--                    <annotationProcessorPaths>-->
    <!--                        <path>-->
    <!--                            <groupId>org.mapstruct</groupId>-->
    <!--                            <artifactId>mapstruct-processor</artifactId>-->
    <!--                            <version>1.4.2.Final</version>-->
    <!--                        </path>-->
    <!--                    </annotationProcessorPaths>-->
    <!--                </configuration>-->
    <!--            </plugin>-->

    <!--        </plugins>-->
    <!--    </build>-->

</project>